--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -22,6 +22,17 @@
             android:icon="@drawable/mapbox_ic_recenter"
             android:title="@string/routes" />
 
+        <item
+            android:id="@+id/nav_profile"
+            android:icon="@android:drawable/ic_menu_edit"
+            android:title="@string/menu_profile" />
+    </group>
+
+    <group android:id="@+id/sesion">
+        <item
+            android:id="@+id/nav_logout"
+            android:icon="@android:drawable/ic_delete"
+            android:title="@string/menu_logout" />
     </group>
 
 </menu>
