--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@id/nav_home">
 
     <fragment
         android:id="@+id/nav_home"
@@ -27,6 +27,11 @@
         android:name="co.edu.unal.biketrainer.ui.routes.RoutesFragment"
         android:label="nav_routes"
         tools:layout="@layout/fragment_routes" />
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="co.edu.unal.biketrainer.ProfileFragment"
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile" />
 
 
 </navigation>
