--- a/app/src/main/res/layout/fragment_routes.xml
+++ b/app/src/main/res/layout/fragment_routes.xml
@@ -1,76 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:mapbox="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/container"
+    xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.routes.RoutesFragment">
-
-    <TextView
-        android:id="@+id/text_routes"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        mapbox:layout_constraintBottom_toBottomOf="parent"
-        mapbox:layout_constraintEnd_toEndOf="parent"
-        mapbox:layout_constraintStart_toStartOf="parent"
-        mapbox:layout_constraintTop_toTopOf="parent" />
 
     <com.mapbox.mapboxsdk.maps.MapView
         android:id="@+id/map_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        mapbox:mapbox_cameraTargetLat="4.624335"
-        mapbox:mapbox_cameraTargetLng="-74.063644"
-        mapbox:mapbox_cameraZoom="12"
-        mapbox:mapbox_uiRotateGestures="false" />
-
-    <!--    mapbox:mapbox_cameraBearing="34.33"-->
-    <!--    mapbox:mapbox_cameraTilt="50.25"-->
-    <!--    mapbox:mapbox_cameraZoomMax="12.41"-->
-    <!--    mapbox:mapbox_cameraZoomMin="6"-->
-
-    <ProgressBar
-        android:id="@+id/route_retrieval_progress_spinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="invisible"
         mapbox:layout_constraintBottom_toBottomOf="parent"
         mapbox:layout_constraintEnd_toEndOf="parent"
         mapbox:layout_constraintStart_toStartOf="parent"
-        mapbox:layout_constraintTop_toTopOf="@+id/map_view" />
-
-    <com.mapbox.navigation.ui.FeedbackButton
-        android:id="@+id/feedbackButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        mapbox:layout_anchor="@id/map_view"
-        mapbox:layout_anchorGravity="bottom|end"
-        tools:ignore="MissingConstraints" />
-
-    <ImageView
-        android:id="@+id/screenshotView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="invisible"
-        tools:ignore="ContentDescription" />
+        mapbox:layout_constraintTop_toTopOf="parent"
+        mapbox:mapbox_cameraTargetLat="36.16266"
+        mapbox:mapbox_cameraTargetLng="-86.78160"
+        mapbox:mapbox_cameraZoom="12" >
+    </com.mapbox.mapboxsdk.maps.MapView>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/startNavigation"
+        android:id="@+id/startRecording"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center_horizontal"
         android:background="@color/colorPrimary"
-        android:text="@string/start_navigation"
+        android:text="@string/start_recording"
         android:textColor="@android:color/white"
         android:visibility="gone"
         mapbox:layout_constraintBottom_toBottomOf="parent"
         mapbox:layout_constraintEnd_toEndOf="parent"
         mapbox:layout_constraintStart_toStartOf="parent"
-        tools:visibility="visible" />
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/stopRecording"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:background="@color/colorPrimary"
+        android:text="@string/stop_recording"
+        android:textColor="@android:color/white"
+        android:visibility="gone"
+        mapbox:layout_constraintBottom_toBottomOf="parent"
+        mapbox:layout_constraintEnd_toEndOf="parent"
+        mapbox:layout_constraintStart_toStartOf="parent"
+        />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/saveRoute"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:background="@color/colorPrimary"
+        android:text="@string/start_recording"
+        android:textColor="@android:color/white"
+        android:visibility="gone"
+        mapbox:layout_constraintBottom_toBottomOf="parent"
+        mapbox:layout_constraintEnd_toEndOf="parent"
+        mapbox:layout_constraintStart_toStartOf="parent"
+        />
+
+    <com.mapbox.navigation.ui.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        mapbox:layout_constraintTop_toTopOf="parent"
+        mapbox:layout_constraintEnd_toEndOf="parent"
+        mapbox:layout_constraintStart_toStartOf="parent"
+        mapbox:layout_constraintBottom_toBottomOf="parent" />
+
+
+</FrameLayout>
