--- a/app/src/main/res/layout/save_route_dialog.xml
+++ b/app/src/main/res/layout/save_route_dialog.xml
@@ -28,13 +28,22 @@
         android:inputType="textPersonName" />
 
 
-    <RatingBar
-        android:id="@+id/ratingBarSaveRoute"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:numStars="4"
-        android:rating="1"
-        android:stepSize="1"/>
+        android:textSize="18dp"
+        android:text="Seguridad"
+        android:textAlignment="center"
+        android:layout_margin="8dp"/>
+
+    <RatingBar
+        android:id="@+id/ratingBarSaveRoute"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:numStars="5"
+        android:rating="3"
+        android:stepSize="1"
+        android:layout_gravity="center_horizontal"/>
 
     <LinearLayout
         android:layout_width="match_parent"
