--- a/app/src/main/res/layout/list_item_route.xml
+++ b/app/src/main/res/layout/list_item_route.xml
@@ -29,4 +29,17 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_level"
         android:layout_alignLeft="@+id/tv_name" />
+
+    <ImageView
+        android:id="@+id/delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_margin="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginRight="12dp"
+        android:src="@drawable/ic_baseline_delete_sweep_24" />
+
+
 </RelativeLayout>
