spinner del campo level en varias pantallas

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -63,7 +63,8 @@
         <Spinner
             android:id="@+id/signUpLevelSpinner"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:entries="@array/levels"/>
 
         <EditText
             android:id="@+id/signUpPhoneEditText"
