--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -37,7 +37,8 @@
         <Spinner
             android:id="@+id/profileLevelSpinner"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:entries="@array/levels"/>
 
         <EditText
             android:id="@+id/profilePhoneEditText"
