--- a/app/src/main/res/layout/fragment_routes.xml
+++ b/app/src/main/res/layout/fragment_routes.xml
@@ -17,8 +17,7 @@
         mapbox:layout_constraintTop_toTopOf="parent"
         mapbox:mapbox_cameraTargetLat="36.16266"
         mapbox:mapbox_cameraTargetLng="-86.78160"
-        mapbox:mapbox_cameraZoom="12" >
-    </com.mapbox.mapboxsdk.maps.MapView>
+        mapbox:mapbox_cameraZoom="12" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/startRecording"
@@ -47,28 +46,6 @@
         mapbox:layout_constraintEnd_toEndOf="parent"
         mapbox:layout_constraintStart_toStartOf="parent"
         />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/saveRoute"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center_horizontal"
-        android:background="@color/colorPrimary"
-        android:text="@string/save_route"
-        android:textColor="@android:color/white"
-        android:visibility="gone"
-        mapbox:layout_constraintBottom_toBottomOf="parent"
-        mapbox:layout_constraintEnd_toEndOf="parent"
-        mapbox:layout_constraintStart_toStartOf="parent" />
-
-    <!--    <com.mapbox.navigation.ui.NavigationView-->
-    <!--        android:id="@+id/navigation_view"-->
-    <!--        android:layout_width="0dp"-->
-    <!--        android:layout_height="0dp"-->
-    <!--        mapbox:layout_constraintTop_toTopOf="parent"-->
-    <!--        mapbox:layout_constraintEnd_toEndOf="parent"-->
-    <!--        mapbox:layout_constraintStart_toStartOf="parent"-->
-    <!--        mapbox:layout_constraintBottom_toBottomOf="parent" />-->
 
 
 </FrameLayout>
