--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn="navigation_view">
+    tools:showIn="mobile_navigation">
 
     <group android:checkableBehavior="single">
         <item
@@ -26,6 +26,10 @@
             android:id="@+id/nav_profile"
             android:icon="@android:drawable/ic_menu_edit"
             android:title="@string/menu_profile" />
+        <item
+            android:id="@id/nav_host"
+            android:title="@string/bike_trainer"
+            android:visible="false" />
     </group>
 
     <group android:id="@+id/sesion">
