--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
     android:label="{title}"
-    app:startDestination="@id/nav_home">
+    app:startDestination="@id/nav_host">
 
     <fragment
         android:id="@+id/nav_home"
@@ -30,9 +30,14 @@
         tools:layout="@layout/fragment_routes" />
     <fragment
         android:id="@+id/profileFragment"
-        android:name="co.edu.unal.biketrainer.ProfileFragment"
+        android:name="co.edu.unal.biketrainer.ui.profile.ProfileFragment"
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" />
+    <fragment
+        android:id="@+id/nav_host"
+        android:name="co.edu.unal.biketrainer.ui.HostFragment"
+        android:label="@string/bike_trainer"
+        tools:layout="@layout/fragment_host" />
 
 
 </navigation>
