--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,6 +19,21 @@
         android:layout_marginBottom="16dp"
         android:orientation="vertical">
 
+        <!--        <ImageView-->
+        <!--            android:id="@+id/avatar_picker"-->
+        <!--            android:layout_width="171dp"-->
+        <!--            android:layout_height="129dp"-->
+        <!--            android:layout_gravity="center_horizontal"-->
+        <!--            android:src="@drawable/ic_menu_camera" />-->
+
+        <com.mikhaellopez.circularimageview.CircularImageView
+            android:id="@+id/avatar_picker"
+            android:layout_width="187dp"
+            android:layout_height="148dp"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/ic_menu_camera"
+            app:civ_shadow_radius="10dp" />
+
         <EditText
             android:id="@+id/profileNameEditText"
             android:layout_width="match_parent"
@@ -35,6 +51,7 @@
             android:inputType="textPersonName" />
 
         <Spinner
+            android:paddingVertical="5dp"
             android:id="@+id/profileLevelSpinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
