--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -46,6 +46,13 @@
             android:layout_height="wrap_content"
             android:text="Grupo Publico" />
 
+        <FrameLayout
+            android:id="@+id/nav_routes_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"/>
+
         <Button
             android:id="@+id/groupsSaveButton"
             android:layout_width="match_parent"
