--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackgroung"
     tools:context=".ui.groups.GroupsFragment">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -31,6 +29,7 @@
             android:id="@+id/groupsLevelSpinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/groupsNameEditText"
             android:entries="@array/levels"/>
 
         <Spinner
@@ -38,28 +37,32 @@
             android:id="@+id/groupsBikersSpinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/groupsLevelSpinner"
             android:entries="@array/bikers"/>
 
         <Switch
             android:id="@+id/groupPublicSwitch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/groupsBikersSpinner"
             android:text="Grupo Publico" />
 
         <FrameLayout
             android:id="@+id/nav_routes_fragment"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"/>
+            android:layout_below="@id/groupsBikersSpinner"
+            android:layout_marginBottom="8dp" />
 
         <Button
             android:id="@+id/groupsSaveButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/colorButtons"
+            android:layout_below="@id/nav_routes_fragment"
             android:text="Crear" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </FrameLayout>
