--- a/app/src/main/res/layout/fragment_routes_list.xml
+++ b/app/src/main/res/layout/fragment_routes_list.xml
@@ -8,6 +8,6 @@
     <ListView
         android:id="@+id/routes"
         android:layout_width="match_parent"
-        android:layout_height="742dp" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
