--- a/app/src/main/res/layout/list_item_group.xml
+++ b/app/src/main/res/layout/list_item_group.xml
@@ -87,6 +87,17 @@
         android:layout_marginRight="12dp"
         android:src="@drawable/ic_baseline_delete_sweep_24" />
 
+    <ImageView
+        android:id="@+id/add_member"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginRight="12dp"
+        android:src="@drawable/ic_baseline_add_box_24" />
+
     <TextView
         android:id="@+id/tv_owner"
         style="?attr/textAppearanceOverline"
