--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="colorButtons">#F9CB9C</color>
     <color name="colorBackgroung">#FFB240</color>
     <color name="colorBikeTrainer">#FD8A17</color>
+    <color name="colorRoute">#2FAAAD</color>
 
     <color name="mapboxGreen">#FD8A17</color>
 </resources>
