--- a/app/src/main/res/layout/fragment_about_you.xml
+++ b/app/src/main/res/layout/fragment_about_you.xml
@@ -52,6 +52,17 @@
             android:layout_below="@id/last_route_time"
             android:layout_marginVertical="10dp" />
 
+        <SeekBar
+            android:id="@+id/experience_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/any_chart_view_speed"
+            android:layout_marginVertical="10dp"
+            android:max="20"
+            android:progress="5"
+            android:progressDrawable="@drawable/custom_seekbar"
+            android:thumb="@drawable/custom_thumb" />
+
         <FrameLayout
             android:id="@+id/child_last_route_fragment_container"
             android:layout_width="match_parent"
