--- a/app/src/main/res/layout/save_route_dialog.xml
+++ b/app/src/main/res/layout/save_route_dialog.xml
@@ -48,9 +48,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:numStars="5"
-        android:rating="3"
-        android:stepSize="1"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_gravity="center_horizontal"
+        android:rating="0"
+        android:stepSize="0.5" />
 
     <LinearLayout
         android:layout_width="match_parent"
