--- a/app/src/main/res/drawable/custom_seekbar.xml
+++ b/app/src/main/res/drawable/custom_seekbar.xml
@@ -10,13 +10,13 @@
                     android:height="12dp" />
                 <corners android:radius="15dp" />
 
-                <solid android:color="#4fc3f7" />
+                <solid android:color="@color/colorBikeTrainer" />
 
                 <gradient
                     android:angle="270"
-                    android:centerColor="#4fc3f7"
-                    android:endColor="#4fc3f7"
-                    android:startColor="#4fc3f7" />
+                    android:centerColor="@color/colorBikeTrainer"
+                    android:endColor="@color/colorBikeTrainer"
+                    android:startColor="@color/colorBikeTrainer" />
             </shape>
         </clip>
     </item>
